# solana-random-number-generator

./: .gitignore  1.json  Anchor.toml  README.md  package-lock.json  package.json
programs/sb-randon-number-generator/: Cargo.toml
programs/sb-randon-number-generator/src/: README.md  lib.rs
programs/solana-randon-number-generator/: Cargo.toml
programs/solana-randon-number-generator/src/: Cargo.toml  constants.rs  errors.rs  events.rs  lib.rs  structs.rs
programs/solana-randon-number-generator/src/instructions/: generate_and_store.rs  generate_with_switchboard.rs  initialize.rs  mod.rs
programs/solana-randon-number-generator/src/states/: mod.rs  random.rs
scripts/: constant.ts  index.ts  random.ts  solanaService.ts
tests/: sb-randon-number-generator.ts  solana-randon-number-generator.ts
