[package]
name = "sb-randon-number-generator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sb_randon_number_generator"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
solana-randomness-service = { version = "1", features = ["cpi"] }
switchboard-solana = "0.29.109"
