[package]
name = "interop-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "interop_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", rev = "128e937f4b0ad4a3044a163aed08d4b67be79a92", features = ["init-if-needed"] }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", rev = "128e937f4b0ad4a3044a163aed08d4b67be79a92" }
spl-token-2022 = "3.0.2"
ethabi = { version = "18.0.0", default-features = false, features = [] }
base-token-program = { path = "../base-token-program", features = ["cpi"]  }
hex = "0.4.3"
